# bakery-full-stack

./: .env.example  .gitignore  README.md  doc.md  docker-compose.yml  heroku.yml  notes.md
panaderia_api/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
panaderia_api/alembic/versions/: a2e171e0ea46_initial_schema.py
panaderia_api/src/ai/: chat_service.py  client.py  tool_executor.py  tools.py
panaderia_api/src/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  security.py
panaderia_api/src/middleware/: error_handler.py  logging.py
panaderia_api/src/models/: __init__.py  category.py  customer.py  enums.py  expense.py  ingredient.py  ingredient_purchase.py  product.py  production_batch.py  recipe.py  sale.py  sale_item.py  supplier.py  user.py
panaderia_api/src/repositories/: __init__.py  base.py  category.py  customer.py  expense.py  ingredient.py  ingredient_purchase.py  product.py  production_batch.py  recipe.py  sale.py  sale_item.py  supplier.py  user.py
panaderia_api/src/schemas/: _base.py  ai.py  auth.py  category.py  customer.py  expense.py  ingredient.py  ingredient_purchase.py  product.py  production_batch.py  recipe.py  sale.py  sale_item.py  supplier.py  user.py
panaderia_api/src/services/: category.py  customer.py  expense.py  ingredient.py  product.py  production.py  purchase.py  recipe.py  sale.py  supplier.py  user.py
panaderia_api/src/utils/: pagination.py
panaderia_api/tests/: conftest.py  test_config.py  test_database.py
panaderia_api/tests/api/: test_auth.py  test_categories.py  (+10 more)
(+123 files in other folders)
